--- a/task-management-client/package.json
+++ b/task-management-client/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.0.8",
+    "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "localforage": "^1.10.0",
